# backhole_simo

./: .gitignore  CHANGELOG.md  README.md  TODO.md  black-hole-sim-roadmap.md  pyproject.toml
config/: default.yaml
scripts/: plot_geodesics.py
src/bhsim/: __init__.py  app.py  constants.py  logging_config.py
src/bhsim/physics/: __init__.py  integrators.py  schwarzschild.py  units.py
src/bhsim/utils/: __init__.py  math_utils.py
tests/: __init__.py  test_config.py
tests/physics/: __init__.py  test_integrators.py  test_schwarzschild.py
