[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bhsim"
version = "0.1.0"
description = "A physically-accurate black hole visualization engine using general-relativistic ray tracing."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Abhinav"},
]
keywords = ["black-hole", "visualization", "ray-tracing", "general-relativity", "opengl"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "moderngl>=5.11",
    "moderngl-window>=2.4",
    "imgui-bundle>=1.5",
    "PyGLM>=2.7",
    "numpy>=1.26",
    "scipy>=1.12",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[project.scripts]
bhsim = "bhsim.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.package-data]
bhsim = ["py.typed"]
